# IonizationChamber

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: build-firmware.yml  ci.yml  static-code-analysis.yml
ContinousIntegration/: .gitignore  run_c_static_code_analysis.sh  run_python_static_code_analysis.sh
ContinuousIntegration/: .gitignore  run_python_static_code_analysis.sh
DevOps/BuildArtifacts/: .gitignore
DevOps/Cmake/: CStaticAnalysis.cmake  CodeBeautifier.cmake  DocsCoverage.cmake  PyCodeCoverage.cmake  PyStaticAnalysis.cmake  PythonStaticAnalysis.cmake  RStaticAnalysis.cmake  _CStaticAnalysis.cmake  _ClassDiagram.cmake  _DocsCoverage.cmake
DevOps/ContinuousIntegration/: .gitignore  README.md  run_c_static_code_analysis.sh  run_generate_docs.sh  run_python_static_code_analysis.sh  run_shellscripts_static_code_analysis.sh
DevOps/Docker/: Dockerfile  README.md
DevOps/Scripts/: .gitignore  .prospector.yaml  CheckFirmwareRomRamUsage.py  CodeCheckerSkipList  Doxyfile  Doxyfile.in  PyStaticAnalysis.sh  PythonStaticAnalysis.sh  _ClassTemplate.puml  _CodeCheckerSkipList  _Doxyfile  _PythonStaticAnalysis.sh  lint_check.R  uncrustify.cfg
Docker/: Dockerfile
Documentation/Diagrams/: ArchitectureOverview.platuml  ArchitectureOverview.tex  FirmwareMainSequence.plantuml  FirmwareSequenceDiagram.plantuml  FirmwareTickSequence.plantuml  HostArchitecture.tex  MeasurementDataFlowDiagram.plantuml  MeasurementSequenceDiagram.plantuml  (+3 more)
Simulation/: .gitignore  README.md  hardware_connection.py  main.py  mock_serial.py  physical_layer.py
Software/: README.md  stm8_debug.cfg  stm8s003.cfg
Software/Firmware/: .project  CMakeLists.txt  README.md  assert_impl.c  assert_impl.h  main.c  main.h  sdcc-stm8.cmake
Software/Firmware/Application/: app_builder.c  app_builder.h  application_builder.c  application_builder.h  byte_utils.h  crc.h  data_acquisition.c  data_acquisition.h  data_frame.c  data_frame.h  measurement_collector.c  measurement_collector.h  measurement_frame.c  measurement_frame.h
Software/Firmware/Device/: data_logger.h  radioactivity_measurer.h  user_interface.h
Software/Firmware/Driver/: clk_conf.c  clk_conf.h  clock_configurator.c  clock_configurator.h  interrupt_configurator.h  interrupt_control.h  interrupt_handler.c  logger.c  logger.h  mcp3425.c  mcp3425.h  pinout_conf.h  pinout_configuration.h  status_leds.c  status_leds.h  stm8_it.c  stm8s_conf_wrapper.h  timer_conf.c  timer_conf.h  timer_configurator.c  timer_configurator.h  uart.c  uart.h  user_interface.c  user_interface.h
Software/Firmware/Inc/: ApplicationBuilder.h  BitHandler.h  ClockConfigurator.h  CommonDataTypes.h  Logger.h  MeasurementCollector.h  MeasurementFrame.h  PinoutConfiguration.h  TimerConfigurator.h  UserInterface.h  VoltageSensorActualValue.h
Software/Firmware/STM8S_StdPeriph_Lib/inc/: stm8s.h
Software/Firmware/STM8S_StdPeriph_Lib/src/: stm8s_clk.c  stm8s_gpio.c
Software/Firmware/Src/: ApplicationBuilder.c  ClockConfigurator.c  Logger.c  MeasurementCollector.c  MeasurementFrame.c  TimerConfigurator.c  UserInterface.c  VoltageSensorActualValue.c  main.c
Software/Firmware/UnitTest/: ApplicationBuilder_Test.c  CMakeLists.txt  ClockConfigurator_Test.c  Logger_Test.c  MeasurementCollector_Test.c  MeasurementFrame_Test.c  README.md  TimerConfigurator_Test.c  UserInterface_Test.c  VoltageSensorActualValue_Test.c  test_app_builder.c  test_application_builder.c  test_clk_conf.c  test_clock_configurator.c  test_data_acquisition.c  test_data_frame.c  test_interrupt_configurator.c  test_interrupt_control.c  test_logger.c  test_mcp3425.c  test_measurement_collector.c  test_measurement_frame.c  test_status_leds.c  test_timer_conf.c  test_timer_configurator.c  test_uart.c  test_user_interface.c
Software/Firmware/UnitTest/Mock/: system_mock.h
Software/Firmware/new_begining/: CMakeLists.txt  assert_impl.c  interrupt_control.h  main.c
Software/Firmware/new_begining/Application/: app_builder.c  app_builder.h  data_acquisition.c  data_acquisition.h
Software/Firmware/new_begining/Device/: radioactivity_measurer.h
Software/Firmware/new_begining/Driver/: clk_conf.c  clk_conf.h  interrupt_control.h  mcp3425.c  pinout_conf.h  stm8_it.c  stm8s_conf_wrapper.h  timer_conf.c  timer_conf.h  user_interface.c  user_interface.h
Software/Firmware/new_begining/STM8S_StdPeriph_Lib/inc/: stm8s.h
Software/Firmware/new_begining/STM8S_StdPeriph_Lib/src/: stm8s_tim1.c
Software/MeasurementAcquisition/: .gitignore  README.md  config.py  main.py  physical_layer.py  pyproject.toml  state_machine.py  transport_layer.py
Software/MeasurementAcquisition/measurement_acquisition/: __init__.py  application_layer.py  config.py  crc.py  interfaces.py  mcp3425_converter.py  measurement_storage.py  physical_layer.py  state_machine.py  transport_layer.py
Software/MeasurementAcquisition/test_component/: __init__.py  test_application.py
Software/MeasurementAcquisition/tests_ut/: __init__.py  test_application_layer.py  test_crc.py  test_mcp3425_converter.py  test_measurement_storage.py  test_physical_layer.py  test_state_machine.py  test_transport_layer.py
acquisitiondmm/: main.py
hardware/: chamber.sch
software/Firmware/: .cproject  CMakeLists.txt  Doxyfile  IonizationChamber.c  makefile  uncrustify.cfg
software/Firmware/Inc/: ApplicationBuilder.h  AutoWakeupConfigurator.h  ClockConfigurator.h  CommonDataTypes.h  DataLogger.h  GUI.h  Logger.h  MCP3425A0T.h  MeassurementFrame.h  PeakDetector.h  PinoutConfiguration.h  PulseCounter.h  UserInterface.h  VoltageSensorActualValue.h  VoltageSensorPeakValue.h
software/Firmware/STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/: stm8s_awu.c  stm8s_clk.c  stm8s_i2c.c  stm8s_tim1.c
software/Firmware/Src/: ApplicationBuilder.c  AutoWakeupConfigurator.c  ClockConfigurator.c  DataLogger.c  GUI.c  Logger.c  MCP3425A0T.c  MeassurementFrame.c  MeasurementCollector.c  PeakDetector.c  PulseCounter.c  TimerConfigurator.c  UserInterface.c  VoltageSensorActualValue.c  VoltageSensorPeakValue.c  main.c  stm8s_it.c
(+168 files in other folders)
