# /workspace/Software/MeasurementAcquisition/pyproject.toml
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "measurement-acquisition"
version         = "0.1.0"
description     = "Utilities for acquiring and storing radiation measurements"
authors         = [{ name = "Robert Gawron" }]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
